feat: JVM & GC